compiler/testData/diagnostics/tests/inference/recursiveLocalFuns/recursiveFun.kt
// !WITH_NEW_INFERENCE
fun foo() {
    fun bar() = (fun() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!><!NI;DEBUG_INFO_MISSING_UNRESOLVED!>bar<!>()<!>)
}
